test/files/run/splain-max-modules.check
newSource1.scala:4: error: implicit error;
!I e: Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: z.Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: y.z.Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: x.y.z.Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: p.q.r.s.t.u.v.w.x.y.z.Type
    implicitly[Type]
              ^
newSource1.scala:4: error: implicit error;
!I e: a.b.c.d.e.f.g.h.i.j.k.l.m.n.o.p.q.r.s.t.u.v.w.x.y.z.Type
    implicitly[Type]
              ^
